# SparkGuard

./: .gitignore  README.md  docker-compose.yml
.cursor/rules/: shell-auto-execute.mdc
backend/: .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_qr_login_sessions.py  003_spark_record_run_log.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  douyin.py  spark.py
backend/app/core/: config.py  database.py  deps.py  errors.py  rate_limit.py  security.py
backend/app/integrations/douyin/: browser_runtime.py  client.py  constants.py  web_browser.py
backend/app/jobs/: scheduler.py  spark_executor.py
backend/app/models/: __init__.py  audit_log.py  base.py  douyin_account.py  qr_login_session.py  spark_job_lock.py  spark_record.py  spark_settings.py  spark_target.py  user.py
backend/app/schemas/: auth.py  douyin.py  spark.py
backend/app/services/: agent_service.py  audit_service.py  auth_service.py  douyin_oauth_service.py  douyin_session_service.py  record_service.py  scheduler_service.py  sender_service.py  spark_settings_service.py  spark_target_service.py
backend/app/utils/: content_checker.py  datetime.py  masking.py
docs/: 火花续航-首期设计文档.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: auth.ts  client.ts  douyin.ts  spark.ts
frontend/src/hooks/: useAuth.ts  useSparkDashboard.ts
frontend/src/pages/: LoginPage.tsx  SparkDashboard.tsx
(+31 files in other folders)
